# Shop-Assistant-RAG-Chatbot

./: .gitignore  README.md  main.py  pyproject.toml  test.py
backend/: main.py
backend/db/: mysql.py
backend/routes/: chat.py  products.py
backend/services/: openai_chain.py  vectorstore.py
data/: data_insertion.py
embedding/: sync_pinecone.py
frontend/: app.py
