[project]
name = "ai-shopassistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "fastapi>=0.118.0",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.12",
    "langchain-openai>=0.3.34",
    "langchain-pinecone>=0.2.12",
    "mysql-connector-python>=9.4.0",
    "pandas>=2.3.3",
    "pinecone>=7.3.0",
    "pinecone-client>=6.0.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.50.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.37.0",
]
